5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2565.log
== SUBMITION (2019-06-11 12:24:08) 
-- CODE:
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>75:
		x[1]+=1
print(x)
-- EXECUTION TIME:
0.893051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2565/main.py", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:24:13) 
-- CODE:
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>75:
		x[1]+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    v = array(eval(input()))
NameError: name 'array' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:24:34) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>75:
		x[1]+=1
print(x)
-- EXECUTION TIME:
1.02542
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[1 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[4 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[4 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:24:35) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>75:
		x[1]+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:25:07) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>75:
		x[1]+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:25:51) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>=75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>=75:
		x[1]+=1
print(x)
-- EXECUTION TIME:
1.06139
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
Digite: Digite: Diigte: [2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
Digite: Digite: Diigte: [5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
Digite: Digite: Diigte: [5 1 4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 12:25:53) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>=75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>=75:
		x[1]+=1
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 12:26:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
h = int(input("Diigte: "))
x = zeros(3,dtype=int)
for i in range(size(v)):
	if(v[i] >= 5) and (v2[i]*100)/h>=75:
		x[0]+=1
	elif(v[i]>=5 and (v2[i]*100)/h  < 75):
		x[2]+=1
	elif(v[i] < 5) and (v2[i]*100)/h>=75:
		x[1]+=1
print(x)
-- EXECUTION TIME:
0.912098
-- TEST CASE 1:
---- input:
[6.2,7.3,7.0,7.5,8.9]
[75,76,74,73,72]
100
---- correct output:
[2 0 3]
---- user output:
[2 0 3]
-- TEST CASE 2:
---- input:
[7.4,7.6,7.5,7.2,7.2,7.3,7.8]
[60,80,55,58,61,70,79]
80
---- correct output:
[5 0 2]
---- user output:
[5 0 2]
-- TEST CASE 3:
---- input:
[8.2,6.9,7.0,6.5,7.4,8.5,7.6,6.9,4.5,5.5]
[90,40,70,35,100,110,85,99,100,110]
120
---- correct output:
[5 1 4]
---- user output:
[5 1 4]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
